/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2021 HereweTech Co.LTD
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

syntax = "proto3";

package svc.sicky.list;
option go_package = "./proto;proto";

import "google/protobuf/empty.proto";

service List {
  rpc InitDB(google.protobuf.Empty) returns (InitDBResp);

  rpc Add(AddReq) returns (AddResp);
  rpc Get(GetReq) returns (GetResp);
  rpc Set(SetReq) returns (SetResp);
  rpc Delete(DeleteReq) returns (DeleteResp);
  rpc List(ListReq) returns (ListResp);
  rpc All(AllReq) returns (AllResp);
  rpc Count(CountReq) returns (CountResp);
  rpc Purge(PurgeReq) returns (PurgeResp);
};

message InitDBResp { bool result = 1; };

message ListDef {
  string id = 1;
  string key = 2;
  string value = 3;
  bool raw = 4;
  int64 status = 5;
};

message AddReq { ListDef item = 1; };
message AddResp { string id = 127; };

message GetReq { string id = 127; };
message GetResp { ListDef item = 1; };

message SetReq { ListDef item = 2; };
message SetResp { bool set = 1; };

message DeleteReq { string id = 127; };
message DeleteResp { bool deleted = 1; };

message ListReq {
  string key = 1;
  int64 offset = 254;
  int64 limit = 255;
};
message ListResp { repeated ListDef items = 1; };

message AllReq { string key = 1; };
message AllResp { repeated ListDef items = 1; };

message CountReq { string key = 1; };
message CountResp { int64 count = 1; };

message PurgeReq { string key = 1; };
message PurgeResp { bool purged = 128; };
